DAO and Criterion update. Some fixes of model description in Pojo.